# better-enums

./: ApiReference.html  CMakeLists.txt  CompilerSupport.html  Contact.html  DesignDecisionsFAQ.html  ExtendingLimits.html  OptInFeatures.html  Performance.html  better-enums-config.cmake.in  enum.h  index.html  sitemap.xml
demo/: BitSets.html  C++17ReflectionProposal.html  SemiQuine.html  SpecialValues.html
test/: CMakeLists.txt
test/source/: test_enum.cpp
tutorial/: CompileTimeUsage.html  Conversions.html  HelloWorld.html  Iteration.html  Maps.html  Representation.html  SafeSwitch.html  ScopeAndSafety.html  StreamOperators.html
